# astra-agi

./: .env.example  .gitignore  launch.md  pyproject.toml  pyrefly.toml  pytest.ini  readme.md  requirements.txt
astra-cloud/client/: pyproject.toml
astra-cloud/client/src/astra_cloud/: __init__.py  agents.py  client.py  exceptions.py  teams.py
astra-cloud/server/: pyproject.toml
astra-cloud/server/examples/: 03_streaming.py  09_agent_with_memory.py  13_advanced_rag.py  14_full_featured_agent.py  15_model_comparison.py  advanced_server_example.py  run_all_tests.py  server_example.py
astra-cloud/server/examples/content_research_workflow/: .env.example
astra-cloud/server/examples/content_research_workflow/agents/: editor_agent.py  fact_checker_agent.py  research_agent.py  seo_optimizer_agent.py  writer_agent.py
astra-cloud/server/examples/content_research_workflow/guardrails/: __init__.py
astra-cloud/server/examples/content_research_workflow/middlewares/: output_formatter.py
astra-cloud/server/examples/content_research_workflow/tests/: test_phase1_agents.py
astra-cloud/server/examples/content_research_workflow/tools/: __init__.py
astra-cloud/server/examples/content_research_workflow/tools/fact_checker_agent/: find_similar_claims.py  verify_fact.py
astra-cloud/server/examples/content_research_workflow/tools/research_agent/: extract_key_points.py  get_recent_news.py  scrape_url.py
astra-cloud/server/examples/content_research_workflow/tools/seo_optimizer_agent/: __init__.py  generate_chart.py  generate_meta_description.py
astra-cloud/server/examples/content_research_workflow/tools/shared/: read_article.py  web_search.py  word_count.py
astra-cloud/server/examples/content_research_workflow/tools/writer_agent/: __init__.py
astra-cloud/server/examples/market_research/: main.py
astra-cloud/server/examples/remote_model_server/: main.py
astra-cloud/server/examples/teams/: __init__.py  main.py
astra-cloud/server/examples/teams/agents/: __init__.py
astra-cloud/server/examples/teams/teams/: __init__.py
astra-cloud/server/examples/teams/tools/: __init__.py
astra-cloud/server/src/astra/: __init__.py
astra-cloud/server/src/astra/embedded/: __init__.py
astra-cloud/server/src/astra/server/: app.py  registry.py
astra-cloud/server/src/astra/server/auth/: middleware.py  routes.py
astra-cloud/server/src/astra/server/playground-dist/assets/: index-CbrPrM8N.js
astra-cloud/server/src/astra/server/routes/: __init__.py
astra-cloud/server/src/astra/server/routes/playground/: __init__.py  router.py  teams.py
astra-cloud/server/src/astra/utils/: normalize_list.py
astra-cloud/server/tests/server/: __init__.py  test_app.py  test_auth.py  test_config.py  test_framework_integration.py  test_ingest_sources.py  test_routes_meta.py  test_runtime_context.py  test_streaming_errors.py
astra-playground-ui/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.js  vite.config.ts
astra-playground-ui/src/: App.jsx  App.tsx  index.css
astra-playground-ui/src/api/: client.js  client.ts  rtkApi.ts  schemas.ts  sse.ts  telemetry.js  tools.js
astra-playground-ui/src/components/chat/: ChatArea.jsx  ChatArea.tsx  ChatComposer.tsx  MarkdownRenderer.tsx  MessageItem.tsx  MessageList.tsx  ToolCallCard.tsx
astra-playground-ui/src/components/layout/: SettingsPage.jsx  SettingsPage.tsx  Sidebar.jsx  Sidebar.tsx  ThreadSidebar.jsx  ThreadSidebar.tsx
astra-playground-ui/src/components/telemetry/: SpanDetailDrawer.jsx  SpanDetailDrawer.tsx  SpanTree.jsx  SpanTree.tsx  TelemetryPage.jsx  TelemetryPage.tsx  TraceDetail.jsx  TraceDetail.tsx  TraceList.jsx  TraceList.tsx  WaterfallTimeline.jsx  WaterfallTimeline.tsx
astra-playground-ui/src/components/tools/: ToolDetailDialog.jsx  ToolDetailDialog.tsx  ToolsPage.jsx  ToolsPage.tsx
astra-playground-ui/src/components/ui/: MermaidDiagram.jsx  badge.tsx  button.tsx
astra-playground-ui/src/components/wiki/: RepoInput.jsx  WikiContent.jsx  WikiPage.jsx  WikiSidebar.jsx  index.js
astra-playground-ui/src/hooks/: useAutoScroll.ts  useChatStream.ts
astra-playground-ui/src/store/: index.js  index.ts
astra-playground-ui/src/store/middleware/: persistAppSettings.ts
astra-playground-ui/src/store/slices/: appSlice.js  appSlice.ts  chatSlice.js  chatSlice.ts  telemetrySlice.js  telemetrySlice.ts  threadSlice.js  threadSlice.ts
astra-playground-ui/src/types/: api.ts  domain.ts  sse.ts
astra/deployment/: pyproject.toml
astra/framework/: README.md  pyproject.toml
astra/framework/examples/code_mode/: 01_python_tools.py  04_code_mode_disabled.py  05_registry_inspection.py  06_mcp_manager.py  07_test_tool_registry_unit.py  09_test_edge_cases.py
astra/framework/examples/market_research/: __init__.py  agent.py  tools.py
astra/framework/tests/: conftest.py
astra/integrations/: pyproject.toml
astra/memorybase/: pyproject.toml
astra/observability/: pyproject.toml
astra/observability/observability/: logger.py
astra/observability/src/observability/: __init__.py  console_debugger.py  debug.py  engine.py  instrument.py
astra/observability/src/observability/logs/: __init__.py  model.py
astra/observability/src/observability/query/: __init__.py  traces.py
astra/observability/src/observability/storage/: __init__.py  base.py  mongodb.py  sqlite.py
astra/observability/src/observability/tracing/: __init__.py  span.py  trace.py
astra/runtime/: README.md  pyproject.toml
jsons/: astra_observability.json
market-research/: main.py  tools.py
starters/astra-enterprise/: .gitignore  README.md  pyproject.toml
starters/astra-enterprise/docker/: Dockerfile
starters/astra-enterprise/src/app/: main.py
starters/astra-enterprise/src/app/core/: settings.py
starters/astra-enterprise/src/app/tools/: market_data.py
starters/astra-server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
starters/astra-server/app/: db.py
test-project/: finance_agent.py  requirements.txt
test-server/: main.py  requirements.txt
(+196 files in other folders)
