[project]
name = "astra-cloud"
version = "0.1.0"
description = "Astra Cloud Python SDK - Access agents, teams, and workflows from Astra Cloud"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    { name = "Himanshu Sharma", email = "himanshu.kumarr07@gmail.com" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "astra",
    "cloud",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "astra-framework>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/HeeManSu/astra-agi"
Documentation = "https://github.com/HeeManSu/astra-agi#readme"
Repository = "https://github.com/HeeManSu/astra-agi"
Issues = "https://github.com/HeeManSu/astra-agi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astra_cloud"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "tests/",
    ".pytest_cache/",
    "__pycache__/",
]

[tool.uv.sources]
astra-framework = { workspace = true }
