[project]
name = "astra-cloud-server"
version = "0.1.0"
description = "Astra Cloud Server - Self-hosted AI agents, teams, and workflows server with FastAPI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    { name = "Himanshu Sharma", email = "himanshu.kumarr07@gmail.com" }
]
keywords = [
    "ai",
    "agents",
    "rag",
    "llm",
    "framework",
    "fastapi",
    "langchain-alternative",
    "ai-agents",
    "retrieval-augmented-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    # Core framework (includes all AI/ML dependencies)
    "astra-framework>=0.1.1",
    # Server dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/HeeManSu/astra-agi"
Documentation = "https://github.com/HeeManSu/astra-agi#readme"
Repository = "https://github.com/HeeManSu/astra-agi"
Issues = "https://github.com/HeeManSu/astra-agi/issues"
Changelog = "https://github.com/HeeManSu/astra-agi/releases"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
mongodb = [
    "motor>=3.3.0",
    "beanie>=1.24.0",
]
aws = [
    "boto3>=1.35.0",
    "aioboto3>=12.0.0",
]
content-research = [
    # Web scraping and search
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.26.0",
    # News API (optional - requires NEWS_API_KEY env var)
    "newsapi-python>=0.2.7",
    # Readability analysis (optional)
    "readability-lxml>=0.8.1",
]
all = [
    "astra-cloud-server[mongodb,aws,content-research]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "tests/",
    "examples/",
    ".pytest_cache/",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "timeout: Test timeout marker",
]
filterwarnings = [
    "ignore:You have modified the pretrained model configuration:UserWarning",
    "ignore:Inheritance class AiohttpClientSession:DeprecationWarning",
    "ignore:coroutine 'FailingAgent.stream' was never awaited:RuntimeWarning",
]

[tool.uv.sources]
astra-framework = { workspace = true }