[project]
name = "integrations"
version = "0.1.0"
description = "Integrations layer for Astra: connectors for tools, authentication, and external APIs"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Himanshu Sharma", email = "himanshu.kumarr07@gmail.com" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"