[project]
name = "memorybase"
version = "0.1.0"
description = "MemoryBase layer for Astra: vector storage, metadata management, and summarization for persistent context"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Himanshu Sharma", email = "himanshu.kumarr07@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
