[project]
name = "astra-observability"
version = "0.1.0"
description = "Astra Observability - Local-first tracing for agentic workflows"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    { name = "Himanshu Sharma", email = "himanshu.kumarr07@gmail.com" }
]
keywords = [
    "observability",
    "tracing",
    "ai-agents",
    "agentic-workflows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/HeeManSu/astra-agi"
Repository = "https://github.com/HeeManSu/astra-agi"
Issues = "https://github.com/HeeManSu/astra-agi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]

[tool.hatch.build.targets.sdist]
include = [
    "src/observability/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
